# Sage

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  run_workers.py
backend/alembic/: env.py
backend/alembic/versions/: 772fc7c90f28_add_channel_to_conversation_messages_.py  a1b2c3d4e5f6_widen_context_events_event_type_column.py  d2813747f8c8_add_accountability_coaching_fields_and_.py  d705f154255e_update_onboarding_step_values_for_new_.py  e4f9aa31db44_add_growing_seasons_weather_logs_.py  ec3a682f0ec0_initial_schema.py
backend/app/: cli.py  main.py  slack_bot.py
backend/app/agents/: orchestrator.py  (+3 more)
backend/tests/: conftest.py  test_accountability_integration.py  test_accountability_models.py  test_alert_scheduler.py  test_context_event_weather.py  test_conversation.py  test_db.py  test_engagement.py  test_engagement_frequency.py  test_engagement_profile.py  test_growing_plan_model.py  test_growing_plan_service.py  test_growing_plan_tools.py  test_growing_season.py  test_integration.py  test_milestone_checker.py  test_onboarding.py  test_orchestrator.py  test_plant_lineage.py  test_plant_milestones.py  test_postcode.py  test_proactive.py  test_proactive_milestones.py  test_process_message.py  test_queue.py  test_seed_data.py  test_send_message.py  test_slack_channel.py  test_slack_models.py  test_slack_sender.py  test_soil.py  test_tool_handlers.py  test_weather.py  test_weather_log.py  test_weather_logging.py  test_whatsapp_service.py  test_whatsapp_webhook.py
(+71 files in other folders)
